# OOP-course-project

./: CMakeLists.txt  Makefile  build.bat  cafeteria  clean.bat  code.docx  main-one-file-code.cpp  test_file_zapis  theory.docx
include/: Cafeteria.h  MenuItem.h  Order.h  Person.h  User.h  UserGroup.h  utils.h
src/: Cafeteria.cpp  MenuItem.cpp  Order.cpp  Person.cpp  User.cpp  UserGroup.cpp  main.cpp  utils.cpp
